force-app/main/default/objects/Case/fields/Daily_Sales_Kads_Order__c.field-meta.xml
<CustomField>
    <fullName>Daily_Sales_Kads_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Daily Sales (Kads)</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>