force-app/main/default/objects/Case/fields/Plant_Code_Under_SSC_Account__c.field-meta.xml
<CustomField>
    <fullName>Plant_Code_Under_SSC_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plant Code Under SSC</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2 AND 3 AND 4)</booleanFilter>
        <filterItems>
            <field>Account.Main_SSC__c</field>
            <operation>equals</operation>
            <valueField>$Source.Primary_Service_Center__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.Primary_Service_Center__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <filterItems>
            <field>Account.Main_Branch__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Dealer_Master</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases Account</relationshipLabel>
    <relationshipName>Cases3</relationshipName>
    <type>Lookup</type>
</CustomField>